Add Entry and Topic form to URLpattern and views

--- a/blog/templates/blog/topics.html
+++ b/blog/templates/blog/topics.html
@@ -11,5 +11,6 @@
 		   <li>Пока нет добавленных тем</li>
 		{% endfor %}
 	</ul>
+	<a href="{% url 'blog:new_topic' %}">Добавить запись:</a>
 
 {% endblock content %}
