--- a/blog/templates/blog/topic.html
+++ b/blog/templates/blog/topic.html
@@ -4,12 +4,15 @@
 
 <p>Тема: {{ topic }} </p>
 <p>Запись:  </p>
-
+<p>
+  <a href="{% url 'blog:new_entry' topic.id %}">Добавить новую запись</a>
+</p>
 <ul>
   {% for entry in entries %}
     <li>
         <p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
         <p>{{ entry.text|linebreaks }}</p>
+        <p><a href="{% url 'blog:edit_entry' entry.id %}">Редактирвать запись</a></p>
     </li>
   {% empty %}
     <li>
