--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,6 +1,12 @@
 <p>
-   <a href="{% url 'blog:index' %}" >Блог</a>
-   <a href="{% url 'blog:topics' %}">Темы</a>
+   <a href="{% url 'blog:index' %}" >Блог --  </a>
+   <a href="{% url 'blog:topics' %}">Темы --  </a>
+   {% if user.is_authenticated %}
+         Hello, {{ user.username }}.
+         <a href="{% url 'user:logout' %}">Выйти -- </a>
+   {% else %}
+         <a href="{% url 'user:login' %}">Войти --</a>
+         <a href="{% url 'user:register' %}">Регистрация --</a>
+   {% endif %}
 </p>
 {% block content %} {% endblock content %}
-
