--- a/blog/templates/blog/new_entry.html
+++ b/blog/templates/blog/new_entry.html
@@ -1,11 +1,14 @@
 {% extends "blog/base.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
-  <p><a href="{% url 'blog:topic' topic.id %}">{{ topic }}</a></p>
-  <p>Добавить новую запись:</p>
-  <form action="{% url 'blog:new_entry' topic.id %}" method="post">
+  <h3><a href="{% url 'blog:topic' topic.id %}">{{ topic }}</a></h3>
+  <h4>Добавить новую запись:</h4>
+  <form action="{% url 'blog:new_entry' topic.id %}" method="post" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type='submit'>Добавить запись</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+      <button type='submit' class="btn btn-primary">Добавить запись</button>
+    {% endbuttons %}
   </form>
 {% endblock content %}
