--- a/blog/templates/blog/edit_entry.html
+++ b/blog/templates/blog/edit_entry.html
@@ -1,11 +1,17 @@
 {% extends "blog/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+  <h3><a href="{% url 'blog:topic' topic.id %}">{{ topic }}</a></h3>
+{% endblock header %}
 
 {% block content %}
-  <p><a href="{% url 'blog:topic' topic.id %}">{{ topic }}</a></p>
   <p>Редактируемая запись:</p>
-  <form action="{% url 'blog:edit_entry' entry.id  %}" method="post">
+  <form action="{% url 'blog:edit_entry' entry.id  %}" method="post" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" name="button">Редактировать запись</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button type="submit" name="button" class="btn btn-primary">Редактировать запись</button>
+    {% endbuttons %}
   </form>
 {% endblock content %}
