--- a/blog/templates/blog/new_topic.html
+++ b/blog/templates/blog/new_topic.html
@@ -1,10 +1,17 @@
 {% extends "blog/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+  <h2>Добавить новую тему</h2>
+{% endblock header %}
 
 {% block content %}
   <p>Добавить новую тему:</p>
-  <form action="{% url 'blog:new_topic' %}" method="post">
+  <form action="{% url 'blog:new_topic' %}" method="post" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" name="Отправить">Добавить тему</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+      <button type="submit" name="Отправить" class="btn btn-primary">Добавить тему</button>
+    {% endbuttons %}
   </form>
   {% endblock content %}
