--- a/blog/templates/blog/topic.html
+++ b/blog/templates/blog/topic.html
@@ -1,23 +1,31 @@
 {% extends "blog/base.html" %}
 
+{% block header %}
+  <h2>Тема {{ topic }}</h2>
+  <h2>Запись: </h2>
+{% endblock header %}
+
 {% block content %}
 
-<p>Тема: {{ topic }} </p>
-<p>Запись:  </p>
-<p>
-  <a href="{% url 'blog:new_entry' topic.id %}">Добавить новую запись</a>
-</p>
+    <h3>
+      <a href="{% url 'blog:new_entry' topic.id %}">Добавить новую запись</a>
+    </h3>
 <ul>
   {% for entry in entries %}
-    <li>
-        <p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
-        <p>{{ entry.text|linebreaks }}</p>
-        <p><a href="{% url 'blog:edit_entry' entry.id %}">Редактирвать запись</a></p>
-    </li>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>{{ entry.date_added|date:'M d, Y H:i' }}
+          <small>
+            <a href="{% url 'blog:edit_entry' entry.id %}">Редактирвать запись</a>
+          </small>
+        </h3>
+      </div>
+      <div class="panel-body">
+        {{ entry.text|linebreaks }}
+      </div>
+    </div> <!-- panel -->
   {% empty %}
-    <li>
       Пока ещё нет записей по этой теме.
-    </li>
   {% endfor %}
 </ul>
 
