--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,10 +1,12 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-  <form  action="{% url 'user:register' %}" method="post">
+  <form  action="{% url 'user:register' %}" method="post" class="form">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" name="button">Регистрация</button>
-    <input type="hidden" name="next" value="{% url 'blog:index' %}"/>
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button type="submit" name="button" class="btn btn-primary">Регистрация</button>
+    {% endbuttons %}
+    <input type="hidden" name="next" value="{% url 'blog:index' %}" />
   </form>
 {% endblock content %}
