--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
   <form  action="{% url 'user:register' %}" method="post" class="form">
